Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73740

Compilation error from qgstutils.cpp with clang 7.0.1, Linux RHEL7

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 5.12.3
    • 5.12.1
    • Multimedia
    • None
    • clang 7.0.1, Red Hat Enterprise Linux 7
    • Linux/X11

    Description

      I am getting a compilation error with clang 7.0.1 under Linux (Red Hat Enterprise Linux 7) when trying to compile qgstutils.cpp from Qt 5.12.1:

       

      qgstutils.cpp:1318:9: error: cannot initialize a member subobject of type 'gint' (aka 'int') with an lvalue of type 'const char [96]'
              "video/x-raw-yuv;"
              ^~~~~~~~~~~~~~~~~~
      qgstutils.cpp:1325:9: error: cannot initialize a member subobject of type 'GstCapsFlags' with an rvalue of type 'long'
              GST_PADDING_INIT
              ^~~~~~~~~~~~~~~~
      /usr/include/gstreamer-0.10/gst/gstconfig.h:70:28: note: expanded from macro 'GST_PADDING_INIT'
      #define GST_PADDING_INIT        { NULL }
                                        ^~~~
      .../lib/clang/7.0.1/include/stddef.h:100:18: note: expanded from macro 'NULL'
      #    define NULL __null
      

      With Qt 5.12.0, the problem was not present.

      I could identify the following commit as source of my problem: https://codereview.qt-project.org/gitweb?p=qt/qtmultimedia.git;a=commitdiff;h=7064057843bd474115055acdc76a886953acf898

      Using the version of qgstutils.cpp prior to this commit worked fine.

       

      Attachments

        For Gerrit Dashboard: QTBUG-73740
        # Subject Branch Project Status CR V

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            dgri Daniel Grieger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes