Gstreamer: Fix compilation error with 0.10 version

Task-number: QTBUG-73740
Change-Id: I1de087b63f65bab39351d5446254a8d1832e88c3
Reviewed-by: Andy Shaw <andy.shaw@qt.io>