src/gsttools/qgstutils.cpp
@@ -1309,8 +1309,7 @@ void QGstUtils::setMetaData(GstBin *bin, const QMap<QByteArray, QVariant> &data)
 
 GstCaps *QGstUtils::videoFilterCaps()
 {
-    static GstStaticCaps staticCaps = {
-        NULL,
+    const char *caps =
 #if GST_CHECK_VERSION(1,2,0)
         "video/x-raw(ANY);"
 #elif GST_CHECK_VERSION(1,0,0)
@@ -1322,9 +1321,8 @@ GstCaps *QGstUtils::videoFilterCaps()
         "video/x-android-buffer;"
 #endif
         "image/jpeg;"
-        "video/x-h264",
-        GST_PADDING_INIT
-    };
+        "video/x-h264";
+    static GstStaticCaps staticCaps = GST_STATIC_CAPS(caps);
 
     return gst_caps_make_writable(gst_static_caps_get(&staticCaps));
 }
